# cta-tracker

./: .gitignore  README.md  bus-stops.json  bustracker-init.py  deploy.py  main.py  rollups.py  test.py  track-buses.py  track_buses.py  track_trains.py  train-stops.json  traintracker-init.py
cleaning/: bus_tracker.py
dependency_layer/: dockerfile
get_schedule/: bus.py
infrastructure/: deploy.py
infrastructure/cloudformation/: main.py  template.yaml
infrastructure/db/: acutal_mapping.py  download_sched.py  fill_db.py  load_actual_data.py  main.py  schema.sql
infrastructure/monitoring/: gen_email.py  main.py  memory.py
infrastructure/monitoring/email_sections/: cost_visuals.py
infrastructure/monitoring/templates/: table.html
infrastructure/website/: deploy.py
monitoring/: cost.py  gen_email.py  invokations.py  main.py  memory.py
monitoring/email_sections/: cost_visuals.py
monitoring/templates/: table.html
process_data/: main.py
process_data/cleaning/: bus_tracker.py  generate_actual_paths.py  rollups.py
process_data/get_schedule/: main.py
process_data/rust_lambda/: Cargo.toml
process_data/rust_lambda/src/: main.rs
website/: d3-chart.js  page.css  page.html  page.js
website/backend/: app.py  main.py  routes.py  utils.py
website/backend/queries/: form_data.sql  schedule.sql  stop_order.sql
website/components/: chart.js  info-box.js  input-form.js  utils.js
website/dependencies/: bzip.js
website/frontend/: page.css  page.html  page.js
website/frontend/components/: chart.js  info-box.js  input-form.js  utils.js
