[package]
name = "rust_lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
reqwest = {version = "0.11", features = ["blocking"]}
soup = {version = "0.5.1"}
chrono = {version = "0.4.19"}
rayon = {version = "1.5.3"}